# yml-resume

./: .gitignore  Makefile  README.md  example_resume.yml  pyproject.toml
example/: resume.yml
scripts/: hot_reload.sh  parse.py  render.py
templates/default/: template.css  template.jinja.html
templates/graytopia/: defaults.cfg  template.css  template.jinja.html
themes/graytopia/: defaults.cfg  template.css  template.jinja.html
